--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,12 @@ body{
 }
 
 .form-holder{
-  text-align: center;
-  margin-top: 50px;
+  /* text-align: center; */
 }
 .formparent{
   width: 80%;
   margin: auto auto;
-  height: 80vh;
+  height: auto;
   background: rgba(255, 255, 255, 1) 0% 0% no-repeat padding-box;
   border-radius: 10px;
   box-shadow: 0px 0px 4px rgba(112, 112, 112);
@@ -66,7 +65,7 @@ body{
   border-radius: 10px;
   opacity: 1;
   display: inline-block;
-  height: 6vh;
+  height: 45px;
   width: 12vw;
 }
 
@@ -147,4 +146,51 @@ tr td{
 }
 .ant-form-item-label{
   width: 100px;
+}
+
+.logins .loginz{
+  max-width: 600px;
+  margin: auto auto;
+  text-align: center;
+}
+
+.logins .formparent{
+  margin-left: 5%;
+  margin-right: 5%;
+  float: left;
+  width: 40%;
+  margin-top: 50px;
+}
+
+.ant-table-cell{
+  background-color: white !important;
+}
+.ant-pagination{
+  text-align: center;
+  float: none !important;
+}
+.ant-tabs{
+  width: 40%;
+  margin-left: 5%;
+  float: left;
+  text-align: center;
+
+}
+.ant-tabs .formparent{
+  width: 100%;
+  margin: 0px;
+}
+@media(max-width: 992px){
+  .ant-tabs{
+    width: 80%;
+    margin: auto auto;
+    text-align: center;
+    float: none;
+  }
+  .logins .formparent{
+margin: auto auto;
+    width: 80%;
+    margin-top: 50px;
+    float: none;
+  }
 }
