--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ tr td{
   width: 15%;
 }
 .formparent div h3{
-  width: 85%;
+  width: auto;
   float: left;
 }
 .ques div h3{
@@ -169,18 +169,11 @@ tr td{
   text-align: center;
   float: none !important;
 }
-.ant-tabs{
-  width: 40%;
-  margin-left: 5%;
-  float: left;
-  text-align: center;
 
-}
 .ant-tabs .formparent{
   width: 100%;
   margin: 0px;
 }
-@media(max-width: 992px){
   .ant-tabs{
     width: 80%;
     margin: auto auto;
@@ -191,6 +184,24 @@ tr td{
 margin: auto auto;
     width: 80%;
     margin-top: 50px;
+  margin-bottom: 10px;
     float: none;
   }
-}
+  .share{
+    width: 100px;
+    height: 32px;
+    color: white;
+  }
+
+  @media(max-width: 992px){
+    .logins .formparent{
+          width: 95%;
+          float: none;
+        }
+    .ant-tabs{
+      width: 95%;
+    }
+  }
+  .sikebich{
+    margin-bottom: 0;
+  }
