--- a/src/App.css
+++ b/src/App.css
@@ -226,3 +226,22 @@ margin: auto auto;
     width: 200px;
     border-radius: 10px;
   }
+  .ant-table-cell img{
+    width: 20px;
+    height: auto;
+    margin-right: 5px;
+  }
+  .logincenter img{
+    margin-left: 10px;
+    width: 17px;
+    height: auto;
+  }
+  .oauth{
+    background-color: white;
+    color: rgba(39, 133, 252, 1);
+    border: none;
+    box-shadow: 0px 0px 6px lightgray;
+    margin-left: 10px;
+    min-width: 135px;
+  }
+
