--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body{
 .formparent{
   width: 80%;
   margin: auto auto;
+  margin-bottom: 20px;
   height: auto;
   background: rgba(255, 255, 255, 1) 0% 0% no-repeat padding-box;
   border-radius: 10px;
