--- a/src/App.css
+++ b/src/App.css
@@ -254,7 +254,7 @@ margin: auto auto;
 .form-holder{
   overflow: auto;
 }
-@media(max-width: 415px){
+@media(max-width: 600px){
   .logincenter{
     width: 100%
   }
@@ -263,5 +263,15 @@ margin: auto auto;
   }
   .ant-table-content{
     font-size: 10px
+  }
+  .max-width-setter .ant-table-cell{
+    max-width: 150px;
+    text-overflow: ellipsis; 
+  }
+}
+@media(max-width: 325px){
+  .max-width-setter .ant-table-cell{
+    max-width: 100px;
+    text-overflow: ellipsis; 
   }
 }
