timer css for small devices

--- a/src/App.css
+++ b/src/App.css
@@ -302,7 +302,7 @@ margin: auto auto;
   .timer{
     display: block;
     position: fixed;
-    top: 9%;
+    top: 50px;
     left: 37%;
   }
   .timer *{
